--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -33,8 +33,15 @@
         <item name="actionMenuTextColor">@color/textColor</item>
     </style>
 
-    <style name="Main.ImageButton" parent="Widget.AppCompat.ImageButton">
+    <style name="Main.RegularImageButton" parent="Widget.AppCompat.ImageButton">
         <item name="android:background">?android:selectableItemBackgroundBorderless</item>
+        <item name="android:backgroundTint">?attr/colorPrimaryDark</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
+    <style name="Main.DrawingImageButton" parent="Widget.AppCompat.ImageButton">
+        <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:backgroundTint">?attr/colorPrimaryDark</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
