--- a/clients/android/app/src/main/res/layout/activity_new_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_new_account.xml
@@ -63,7 +63,7 @@
 
     <Button
         android:id="@+id/new_account_create_lockbook"
-        style="@style/Main.Button.Colored"
+        style="@style/Main.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/new_account_submit" />
