--- a/clients/android/app/src/main/res/layout/activity_main.xml
+++ b/clients/android/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
 
     <Button
         android:id="@+id/welcome_new_lockbook"
-        style="@style/Main.Button.Colored"
+        style="@style/Main.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/welcome_import_lockbook"
-        style="@style/Main.Button.Colored"
+        style="@style/Main.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/lockbook_import" />
