--- a/clients/android/app/src/main/res/layout/activity_import_account.xml
+++ b/clients/android/app/src/main/res/layout/activity_import_account.xml
@@ -40,7 +40,7 @@
         android:id="@+id/import_lockbook"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/Main.Button.Colored"
+        style="@style/Main.Button.Borderless.Colored"
         android:text="@string/import_account_import_button" />
 
     <ProgressBar
