--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
   <color name="drawingToolbarBackground">@color/transparent_white</color>
   <color name="windowBackground">@color/white</color>
   <color name="textColor">@color/black</color>
-  <color name="scannerIconColor">@color/black</color>
+  <color name="iconColor">@color/black</color>
   <color name="documentNameTextColor">@color/black</color>
 
   <bool name="windowLightStatusBar">true</bool>
