--- a/clients/android/app/src/main/res/layout/fragment_list_files.xml
+++ b/clients/android/app/src/main/res/layout/fragment_list_files.xml
@@ -79,53 +79,39 @@
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab_drawing"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    style="@style/Main.FAB"
                     android:contentDescription="@string/list_files_create_document"
                     android:onClick="@{() -> listFilesViewModel.onNewDocumentFABClicked(true)}"
-                    android:src="@drawable/ic_baseline_border_color_24"
                     android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimary"
-                    app:rippleColor="@color/light" />
+                    android:src="@drawable/ic_baseline_border_color_24" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab_folder"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    style="@style/Main.FAB"
                     android:contentDescription="@string/list_files_create_folder"
                     android:onClick="@{() -> listFilesViewModel.onNewFolderFABClicked()}"
-                    android:src="@drawable/round_folder_white_18dp"
                     android:visibility="gone"
-                    app:backgroundTint="@color/colorPrimary"
-                    app:rippleColor="@color/light" />
+                    android:src="@drawable/round_folder_white_18dp" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab_document"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    style="@style/Main.FAB"
                     android:contentDescription="@string/list_files_create_document"
                     android:onClick="@{() -> listFilesViewModel.onNewDocumentFABClicked(false)}"
-                    app:backgroundTint="@color/colorPrimary"
-                    android:src="@drawable/ic_baseline_insert_drive_file_24"
                     android:visibility="gone"
-                    app:rippleColor="@color/light" />
+                    android:src="@drawable/ic_baseline_insert_drive_file_24" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/list_files_fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="18dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginRight="18dp"
-                    android:layout_marginBottom="18dp"
+                    android:layout_margin="18dp"
                     app:backgroundTint="@color/colorPrimary"
                     android:contentDescription="@string/list_files_create_file"
                     android:onClick="@{() -> listFilesViewModel.collapseExpandFAB()}"
                     android:src="@drawable/ic_baseline_add_24"
-                    app:rippleColor="@color/light" />
+                    app:tint="@color/white"
+                    app:rippleColor="@color/colorPrimaryDark" />
 
             </LinearLayout>
         </FrameLayout>
