--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -2,6 +2,8 @@
     <style name="Main" parent="Theme.MaterialComponents.DayNight">
         <item name="android:windowBackground">@color/colorPrimaryDark</item>
         <item name="android:navigationBarColor">@color/navigationBarColor</item>
+        <item name="snackbarStyle">@style/Main.SnackBar</item>
+        <item name="snackbarTextViewStyle">@style/Main.SnackBar.TextView</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="android:windowLightStatusBar" tools:targetApi="23">@bool/windowLightStatusBar</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -23,6 +25,15 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="Main.SnackBar" parent="Widget.MaterialComponents.Snackbar">
+        <item name="backgroundTint">@color/background</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Main.SnackBar.TextView" parent="Widget.MaterialComponents.Snackbar.TextView">
+        <item name="android:textColor">@color/white</item>
     </style>
 
     <style name="Main.NoActionBar" parent="Main">
@@ -49,6 +60,7 @@
         <item name="android:layout_margin">10dp</item>
         <item name="android:background">?android:selectableItemBackground</item>
         <item name="android:clickable">true</item>
+        <item name="android:animateLayoutChanges">true</item>
         <item name="android:focusable">true</item>
     </style>
 
@@ -57,6 +69,15 @@
         <item name="android:layout_height">40dp</item>
         <item name="android:layout_margin">10dp</item>
         <item name="cornerRadius">100dp</item>
+    </style>
+
+    <style name="Main.FAB" parent="Widget.MaterialComponents.FloatingActionButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
+        <item name="rippleColor">@color/light</item>
+        <item name="tint">@color/iconColor</item>
     </style>
 
     <style name="Main.Toolbar">
