android: better drawing UI and erasing (#478)
* some setup

* much better erasing

* initial drawing ui

* some more layout handling

* layed out colors and erase mode

* fully working with colors and erase, no sizes yet

* fixed color issue with new theming

* switching to pen and erase buttons

* working sizes and modes

* able to make tools disappear with tap, has fullscreen, and correctly working buttons

* android fmt

* changed the layout and button selection theme, fixed theming issues

* made tapping on and off the toolbar better, and made selected tools survive configuration changes

* added smooth fade in and fade out for the drawing toolbar

--- a/clients/android/app/src/main/res/layout/activity_main.xml
+++ b/clients/android/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,14 @@
 
 
     <TextView
-        style="@style/Text.Headline"
+        style="@style/Main.Text.Headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="20dp"
         android:text="@string/lockbook_title" />
 
     <TextView
-        style="@style/Text.Body"
+        style="@style/Main.Text.Body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="75dp"
@@ -25,7 +25,7 @@
 
     <Button
         android:id="@+id/welcome_new_lockbook"
-        style="@style/Button.Colored"
+        style="@style/Main.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
@@ -33,7 +33,7 @@
 
     <Button
         android:id="@+id/welcome_import_lockbook"
-        style="@style/Button.Colored"
+        style="@style/Main.Button.Borderless.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/lockbook_import" />
