--- a/clients/android/app/src/main/res/values/colors.xml
+++ b/clients/android/app/src/main/res/values/colors.xml
@@ -15,15 +15,19 @@
   <color name="white">#FFFFFF</color>
   <color name="grey">#787878</color>
 
+  <color name="transparent_black">#94000000</color>
+  <color name="transparent_white">#94E3E5EB</color>
+
   <color name="selectedFileBackground">#64B5F6</color>
   <color name="navigationBarColor">@color/white</color>
   <color name="iconStatusBarColor">@color/white</color>
   <color name="colorPrimary">@color/blue</color>
   <color name="colorAccent">@color/blue</color>
   <color name="colorPrimaryDark">@color/white</color>
+  <color name="drawingToolbarBackground">@color/transparent_white</color>
   <color name="windowBackground">@color/white</color>
   <color name="textColor">@color/black</color>
-  <color name="scannerIconColor">@color/black</color>
+  <color name="iconColor">@color/black</color>
   <color name="documentNameTextColor">@color/black</color>
 
   <bool name="windowLightStatusBar">true</bool>
