new documents are opened automatically and there is a setting to disable and enable it

--- a/clients/android/app/src/main/res/xml/settings_preference.xml
+++ b/clients/android/app/src/main/res/xml/settings_preference.xml
@@ -89,4 +89,16 @@
 
     </PreferenceCategory>
 
+    <PreferenceCategory
+        android:title="Miscellaneous"
+        android:icon="@drawable/ic_baseline_miscellaneous_services_24">
+
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="open_new_doc_automatically"
+            android:title="@string/settings_open_new_document_automatically"
+            app:iconSpaceReserved="false" />
+
+    </PreferenceCategory>
+
 </PreferenceScreen>
