--- a/clients/android/app/src/main/res/layout/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout/toolbar_drawing.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:id="@+id/drawing_tools_menu"
+    android:visibility="gone"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_vertical|start"
