removed lint error

--- a/clients/android/app/src/main/res/layout-land/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout-land/toolbar_drawing.xml
@@ -2,6 +2,8 @@
 <LinearLayout android:id="@+id/drawing_tools_menu"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:visibility="gone"
+
     android:layout_gravity="bottom|center_horizontal"
     android:background="@color/colorPrimaryDark"
     android:gravity="center_horizontal"
