--- a/clients/android/app/src/main/res/layout-sw600dp/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout-sw600dp/toolbar_drawing.xml
@@ -2,6 +2,7 @@
 <LinearLayout android:id="@+id/drawing_tools_menu"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:visibility="gone"
     android:layout_gravity="center_horizontal|bottom"
     android:background="@color/colorPrimaryDark"
     android:gravity="center_horizontal"
@@ -64,7 +65,6 @@
         android:layout_height="wrap_content"
         android:textColor="@color/textColor"
         android:textSize="20sp"
-        android:text="100"
         android:layout_gravity="center_vertical"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
