--- a/clients/android/app/src/main/res/layout/toolbar_drawing.xml
+++ b/clients/android/app/src/main/res/layout/toolbar_drawing.xml
@@ -2,6 +2,7 @@
 <LinearLayout android:id="@+id/drawing_tools_menu"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:visibility="gone"
     android:layout_gravity="center_vertical|start"
     android:background="@color/colorPrimaryDark"
     android:gravity="center_horizontal"
