--- a/clients/android/app/src/main/res/values/styles.xml
+++ b/clients/android/app/src/main/res/values/styles.xml
@@ -60,9 +60,26 @@
         <item name="android:focusable">true</item>
     </style>
 
+    <style name="Main.Widget.DrawingImageButtonSW600dp" parent="Widget.AppCompat.ImageButton">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="android:background">?android:selectableItemBackground</item>
+        <item name="android:clickable">true</item>
+        <item name="android:animateLayoutChanges">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
+    <style name="Main.Widget.DrawingButtonSW600dp" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
+        <item name="android:layout_width">35dp</item>
+        <item name="android:layout_height">35dp</item>
+        <item name="android:layout_margin">10dp</item>
+        <item name="cornerRadius">100dp</item>
+    </style>
+
     <style name="Main.Widget.DrawingButton" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
-        <item name="android:layout_width">40dp</item>
-        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
         <item name="android:layout_margin">10dp</item>
         <item name="cornerRadius">100dp</item>
     </style>
