--- a/clients/android/app/src/main/res/layout/activity_drawing.xml
+++ b/clients/android/app/src/main/res/layout/activity_drawing.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawing_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,13 +13,13 @@
         android:layout_height="wrap_content"
         android:indeterminate="true"
         android:minHeight="20dp"
-        android:visibility="gone"
-        android:background="@color/black"
+        android:background="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <app.lockbook.ui.DrawingView
+        android:visibility="gone"
         android:id="@+id/drawing_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -27,12 +27,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/drawing_progress_bar" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:translationZ="-1dp"
-        android:background="@color/drawingUntouchableBackground" />
 
     <FrameLayout
         android:id="@+id/drawing_frame_layout"
